populates the Dom and saves responses

--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Favorite Things</title>
 </head>
 <body>
-    
+    <fieldset>
+        <label for="favThing">Favorite Thing: </label>
+        <input type="text" id="favThing" placeholder="What's your favorite thing?" autofocus />
+    </fieldset>
+    <fieldset>
+        <label for="location">Location: </label>
+        <input type="text" id="location" placeholder="Where might you buy it?" />
+    </fieldset>
+    <button id="saveEntry">Save to Wishlist</button>
+    <article id="favoriteThings">
+
+    </article>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
